<resources>
    <string name="app_name">ToDo</string>
    <string name="placeholder_text">Add to your ToDo List</string>
    <string name="task_title">Task Title</string>
    <string name="task_message">Additional Notes</string>
    <string name="task_priority">Priority</string>
    <string name="task_due_date">Due Date</string>
    <string name="task_title_hint">Add a New Task</string>
    <string name="task_notes_hint">Add any additional notes</string>
    <string-array name="priority_array">
        <item>LOW</item>
        <item>MEDIUM</item>
        <item>HIGH</item>
    </string-array>
</resources>
